[metadata]
name = fame
version = 1.0
author = Henry Truong
author_email = henry.truong@durham.ac.uk
description = A factorisation-aware matrix element emulator (FAME) for electron-positron annihilation into up to 5 jets.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/htruong0/fame
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19.5
    matplotlib>=3.1.1
    tensorflow>=2.4.0
    tqdm>=4.56.0
    pyjet>=1.6.0
    notebook>=6.0.2
    ipywidgets>=7.6.3

[options.packages.find]
where = src